# KGFC

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/kgfc/: __init__.py  cli.py  core.py  embedding.py  models.py  treesitter.py  utils.py
src/kgfc/chunking/: ast_chunking.py
src/kgfc/database/: client.py  retriever.py
